<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/my_primary"
        android:id="@+id/app_title"/>

    <ImageView
        android:id="@+id/setting"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="360dp"
        android:layout_marginTop="-35dp"
        android:src="@drawable/setting"/>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:id="@+id/horizontal_buttons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SearchView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:queryHint="Ara"
                android:layout_gravity="center"
                android:id="@+id/search_view"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_1"
                android:layout_margin="6dp"
                android:text="@string/type1"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_2"
                android:layout_margin="6dp"
                android:text="@string/type2"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_3"
                android:layout_margin="6dp"
                android:text="@string/type3"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_4"
                android:layout_margin="6dp"
                android:text="@string/type4"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_5"
                android:layout_margin="6dp"
                android:text="@string/type5"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_6"
                android:layout_margin="6dp"
                android:text="@string/type6"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_7"
                android:layout_margin="6dp"
                android:text="@string/type7"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_8"
                android:layout_margin="6dp"
                android:text="@string/type8"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_9"
                android:layout_margin="6dp"
                android:text="@string/type9"
                android:backgroundTint="@color/my_primary"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_10"
                android:layout_margin="6dp"
                android:text="@string/type10"
                android:backgroundTint="@color/my_primary"/>


        </LinearLayout>

    </HorizontalScrollView>


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:id="@+id/progress_bar"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/news_recycler_view"/>




</LinearLayout>